Base DC updated w/ DACTYL config; SSL in dev disabled

--- a/config/document_cloud.yml
+++ b/config/document_cloud.yml
@@ -1,12 +1,14 @@
 <% secrets = YAML.load_file('./secrets/secrets.yml')[ENV['RAILS_ENV'] || "development"] %>
 defaults: &defaults
-  cloud_crowd_server:   http://dev.dcloud.org:8080
-  server_root:          dev.dcloud.org
+  cloud_crowd_server:   http://localhost:8080
+  server_root:          localhost:1234
   aws_zone:             us-east-1c
-  preconfigured_ami_id: ami-11a4b578
+  preconfigured_ami_id: ami-11a4b57801aae468
+  ssl_on:               true
 
 development:
   <<: *defaults
+  ssl_on: false
 
 staging:
   <<: *defaults
@@ -17,7 +19,7 @@ staging:
 production:
   <<: *defaults
   cloud_crowd_server: <%= secrets['db_host'] %>:8080
-  server_root:        www.documentcloud.org
+  server_root:        54.197.224.62
   asset_root:         "//s3.amazonaws.com/s3.documentcloud.org"
   db_volume_id:       vol-d4c305bd
 
