--- a/config/server/files/secrets/secrets.yml
+++ b/config/server/files/secrets/secrets.yml
@@ -10,6 +10,8 @@ defaults : &defaults
   guest_password: DocumentCloud               # The password used for logging into basic auth in staging
   username:       documentcloud               # The database username
   db_password:    documentcloudVirtualMachine # The database password
+  db_host:        localhost                   # the hostname for your database server
+  solr_host:      localhost                   # the hostname for your solr server
 
 development :
   <<: *defaults
