--- a/config/sunspot.yml
+++ b/config/sunspot.yml
@@ -1,27 +1,30 @@
 production:
   solr:
-    hostname: ec2-184-73-200-49.compute-1.amazonaws.com
+    hostname: localhost
     port: 7377
     path: /solr/collection1
     read_timeout: 5
     open_timeout: 1.5
     log_level: INFO
-    min_memory: 20M
+    min_memory: 200M
     max_memory: 3G
     pid_dir: tmp/pids
+    solr_home: solr
 
 development:
   solr:
     hostname: localhost
     port: 7377
-    log_level: ALL
     path: /solr/collection1
+    log_level: ALL
+    min_memory: 20M
+    max_memory: 200M
     pid_dir: tmp/pids
 
 test:
   solr:
     hostname: localhost
-    port: 8982
+    port: 8981
     log_level: WARNING
     path: /solr/collection1
     pid_dir: tmp/pids
