--- a/config/cloud_crowd/production/database.yml
+++ b/config/cloud_crowd/production/database.yml
@@ -1,14 +1,15 @@
-# This is a standard ActiveRecord database.yml file. You can configure it
+# This is a standard ActiveRecord database.yml file. You can configure it 
 # to use any database that ActiveRecord supports.
 
-<% secrets = YAML.load_file('secrets/secrets.yml')[ENV['RAILS_ENV']] %>
+# :adapter:  mysql
+# :encoding: utf8
+# :username: root
+# :password:
+# :socket:   /tmp/mysql.sock
+# :database: cloud_crowd
 
-:adapter:  postgresql
-:encoding: unicode
-:schema_search_path: public
-:pool:     5
-:username: <%= secrets['username'] %>
-:password: <%= secrets['db_password'] %>
-:allow_concurrency: true
-:host:     <%= secrets['db_host'] %>
-:database: dcloud_crowd_production
+# If you'd prefer to use an SQLite database instead, the following configuration
+# will do nicely:
+
+:adapter:  sqlite3
+:database: cloud_crowd.db
