Changed config to avoid YAML parsing error when running Jammit task

--- a/config/document_cloud.yml
+++ b/config/document_cloud.yml
@@ -1,4 +1,3 @@
-<% secrets = YAML.load_file('./secrets/secrets.yml')[ENV['RAILS_ENV'] || "development"] %>
 defaults: &defaults
   cloud_crowd_server:   http://localhost:8080
   server_root:          localhost:1234
@@ -18,10 +17,11 @@ staging:
 
 production:
   <<: *defaults
-  cloud_crowd_server: <%= secrets['db_host'] %>:8080
+  cloud_crowd_server: localhost:8080
   server_root:        54.197.224.62
   asset_root:         "//s3.amazonaws.com/s3.documentcloud.org"
   db_volume_id:       vol-d4c305bd
 
 test:
   <<: *defaults
+
