Mid-implementation of Reject DE and limiting annogroups sent to viewer

--- a/config/assets.yml
+++ b/config/assets.yml
@@ -25,6 +25,9 @@ javascripts:
   editor:
     - public/javascripts/editor/editor_toolbar.js
     - public/javascripts/editor/*.js
+    - public/javascripts/editor/de/*.js
+    - public/javascripts/editor/qc/*.js
+    - public/javascripts/editor/qa/*.js
     - app/views/jst/editor/*.jst
   search_embed:
     - app/views/jst/embed/search_*.jst
