More Staging config changes

--- a/config/document_cloud.yml
+++ b/config/document_cloud.yml
@@ -12,9 +12,9 @@ development:
 
 staging:
   <<: *defaults
-  cloud_crowd_server: ec2-50-16-197-147.compute-1.amazonaws.com:8080
-  server_root:        staging.documentcloud.org
-  asset_root:         "//s3.amazonaws.com/dcloud_staging"
+  cloud_crowd_server: http://localhost:8080
+  server_root:        54.221.219.223
+  asset_root:         "//s3.amazonaws.com/dactyl-docs-qa"
 
 production:
   <<: *defaults
