--- a/config/document_cloud.yml
+++ b/config/document_cloud.yml
@@ -13,13 +13,13 @@ development:
 staging:
   <<: *defaults
   cloud_crowd_server: http://localhost:8080
-  server_root:        54.221.219.223
+  server_root:        https://dactyl-test.denney.ws
   asset_root:         "//s3.amazonaws.com/dactyl-docs-qa"
 
 production:
   <<: *defaults
   cloud_crowd_server: http://localhost:8080
-  server_root:        54.197.224.62
+  server_root:        https://dactyl.denney.ws
   asset_root:         "//s3.amazonaws.com/dactyl-docs"
   db_volume_id:       vol-d4c305bd
 
