--- a/config/database.yml
+++ b/config/database.yml
@@ -7,6 +7,7 @@ defaults: &defaults
   password: <%= DC::SECRETS['db_password'] %>
   allow_concurrency: true
   host: <%= DC::SECRETS['db_host'] %>
+  port: <%= DC::SECRETS['db_port'] %>
 
 development:
   <<: *defaults
