--- a/config/document_cloud.yml
+++ b/config/document_cloud.yml
@@ -1,7 +1,7 @@
 defaults: &defaults 
   cloud_crowd_server:	http://localhost:8080
   wpd_server:           http://localhost:1235
-  server_root:          localhost:1234
+  server_root:          local.documentcloud.org
   aws_zone:             us-east-1c
   preconfigured_ami_id: ami-11a4b57801aae468
   ssl_on:               true
@@ -9,6 +9,7 @@ defaults: &defaults
 development:
   <<: *defaults
   ssl_on:             false
+  wpd_server:         http://local.documentcloud.org:1235
   asset_root:         "//s3.amazonaws.com/dactyl-docs-dev"
 
 staging:
