--- a/config/server/files/nginx/nginx.conf
+++ b/config/server/files/nginx/nginx.conf
@@ -1,42 +1,31 @@
 user www-data www-data;
 worker_processes 4;
 
-error_log /var/log/nginx/error.log;
-pid       /run/nginx.pid;
+error_log  /var/log/nginx/error.log;
+pid        /var/run/nginx.pid;
 
 events {
   worker_connections 1024;
 }
 
 http {
+  include passenger.conf;
+  passenger_default_user www-data;
+  passenger_pool_idle_time 0;
+  passenger_max_pool_size 4;
 
-	##
-	# Basic Settings
-	##
+  include       mime.types;
+  default_type  application/octet-stream;
+  access_log    /var/log/nginx/access.log;
 
-	sendfile on;
-	tcp_nopush on;
-	tcp_nodelay on;
-	keepalive_timeout 2;
-	types_hash_max_size 2048;
-  client_max_body_size 400M;
-	# server_tokens off;
-
-	# server_names_hash_bucket_size 64;
-	# server_name_in_redirect off;
-
-	include /etc/nginx/mime.types;
-	default_type application/octet-stream;
-
-	##
-	# Logging Settings
-	##
-
-	access_log /var/log/nginx/access.log;
-
-	##
-	# Gzip Settings
-	##
+  sendfile              on;
+  tcp_nopush            on;
+  keepalive_timeout     2;
+  client_max_body_size  200M;
+  
+  ssl_ciphers         ALL:!aNULL:!ADH:!eNULL:!MEDIUM:!LOW:!EXP:!kEDH:RC4+RSA:+HIGH;
+  ssl_session_cache   shared:SSL:10m;
+  ssl_session_timeout 10m;
 
   gzip            on;
   gzip_static     on;
@@ -45,53 +34,5 @@ http {
   gzip_vary       on;
   gzip_types      text/plain text/css application/x-javascript application/json text/xml application/xml application/xml+rss text/javascript;
 
-	# gzip_buffers 16 8k;
-	# gzip_http_version 1.1;
-
-  ssl_ciphers         ALL:!aNULL:!ADH:!eNULL:!MEDIUM:!LOW:!EXP:!kEDH:RC4+RSA:+HIGH;
-  ssl_session_cache   shared:SSL:10m;
-  ssl_session_timeout 10m;
-
-	##
-	# nginx-naxsi config
-	##
-	# Uncomment it if you installed nginx-naxsi
-	##
-
-	# include /etc/nginx/naxsi_core.rules;
-
-	##
-	# Phusion Passenger config
-	##
-	include /etc/nginx/passenger.conf;
-	
-
-	##
-	# Virtual Host Configs
-	##
-
-	include /etc/nginx/conf.d/*.conf;
-	include /etc/nginx/sites-enabled/*;
+  include /etc/nginx/sites-enabled/*;
 }
-
-
-# mail {
-#	# See sample authentication script at:
-#	# http://wiki.nginx.org/ImapAuthenticateWithApachePhpScript
-# 
-#	# auth_http localhost/auth.php;
-#	# pop3_capabilities "TOP" "USER";
-#	# imap_capabilities "IMAP4rev1" "UIDPLUS";
-# 
-#	server {
-#		listen     localhost:110;
-#		protocol   pop3;
-#		proxy      on;
-#	}
-# 
-#	server {
-#		listen     localhost:143;
-#		protocol   imap;
-#		proxy      on;
-#	}
-# }
