--- a/config/server/files/secrets/secrets.yml
+++ b/config/server/files/secrets/secrets.yml
@@ -1,4 +1,4 @@
-# Sensitive API keys and other secret strings.
+# General structure for sensitive API keys and other secret strings.  Fill with actual values and store in secrets/secrets.yml (out of source control).
 
 defaults : &defaults
   aws_access_key: 
@@ -8,9 +8,10 @@ defaults : &defaults
   pixel_ping:     DocumentCloud               # The secret hashed key for Pixel Ping (keep in sync with secrets/pixel_ping/:env.json)
   guest_username: guest                       # The username used for logging into basic auth in staging
   guest_password: DocumentCloud               # The password used for logging into basic auth in staging
-  username:       documentcloud               # The database username
-  db_password:    documentcloudVirtualMachine # The database password
-  db_host:        localhost                   # the hostname for your database server
+  username:       postgres                    # The database username
+  db_password:                                # The database password
+  db_host:        db                          # the hostname for your database server
+  db_port:        5432
   solr_host:      localhost                   # the hostname for your solr server
 
 development :
